<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_purple"
    tools:context=".JobFields">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="594dp"
        android:text="Enter the Job Details"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>


    <EditText
        android:id="@+id/jobtype"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/input_text_field_styling"
        android:fontFamily="@font/poppinsmedium"
        android:hint="Job Type: "
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="257dp"
        android:background="@drawable/input_text_field_styling"
        android:fontFamily="@font/poppinsmedium"
        android:hint="Location: "
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobtype"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/reqskills"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/input_text_field_styling"
        android:fontFamily="@font/poppinsmedium"
        android:hint="Required Skills: "
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/submitbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintVertical_bias="0.583" />

    <EditText
        android:id="@+id/salary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/input_text_field_styling"
        android:fontFamily="@font/poppinsmedium"
        android:hint="Salary: "
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_royal_purple"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salary"
        app:layout_constraintVertical_bias="0.675" />


</androidx.constraintlayout.widget.ConstraintLayout>