<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_royal_purple"
    tools:context=".SearchCompany">

    <TextView
        android:id="@+id/s"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search companies on the basis of Job, Location and Salary"
        android:fontFamily="@font/poppinsbold"
        android:textSize="30dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/s"
        android:background="@drawable/input_text_field_styling"
        android:hint="JOB"
        android:id="@+id/job"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/job"
        android:background="@drawable/input_text_field_styling"
        android:hint="LOCATION"
        android:id="@+id/location"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        android:background="@drawable/input_text_field_styling"
        android:hint="SALARY"
        android:id="@+id/salary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/salary"
        android:background="@drawable/main_btn_styling"
        android:hint="SEARCH"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/srch"/>

    <Button
        android:id="@+id/bckkk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="309dp"
        android:background="@color/tropical_blue"
        android:fontFamily="@font/poppinsbold"
        android:hint="BACK"
        android:padding="10dp"
        android:textColor="@color/tropical_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/srch">
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>